--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \\\\\\\"Error: no test specified\\\\\\",
-    "build:ui": "rm -rf build && cd ../phonebook/ && npm run build --prod && cp -r build ../notes-backend",
-    "deploy": "git push heroku main",
+    "build:ui": "rm -rf build && cd ../phonebook/ && npm run build --prod && cd .. && xcopy phonebook/build server-phonebook && cd server-phonebook",
+    "deploy": "git push https://git.heroku.com/salty-citadel-27533.git",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",    
     "logs:prod": "heroku logs --tail"
   },
